more fixes for desktop